--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -435,8 +435,7 @@ It is possible then that the bias toward the prior in other methods skewed their
 While \cite{Johnston2008} is certainly in the minority; further exhaustive studies 
 of the parameters, using unbiased techniques may be called for. A further 
 comparison between the distributions found in \cite{Johnston2008} and 
-\cite{Friston2000} will be discussed in \autoref{sec:PriorDist}, including
-graphs: \autoref{fig:MeanResponseF}, \autoref{fig:MeanResponseJ}.
+\cite{Friston2000} will be discussed in \autoref{sec:PriorDist}.
 
 \subsection{Previous Particle Filter Approaches}
 In \cite{Murray2008} a particle filter based approach was used to integrate
