--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -297,15 +297,15 @@ There is an interesting anomaly with the priors found in virtually all
 the works that characterized the parameters, except \cite{Johnston2008}.
 The BOLD signal is universally recognized to be around $2-3\%$, maybe
 reaching $5\%$ in extreme activation. Yet using the mean priors
-from \cite{Friston2000}, the signal response for a $.1$ second
-impulse only reaches maybe half a percent, as \autoref{fig:MeanResponseF}
+from \cite{Friston2000}, the signal response for a $0.1$ second
+impulse only reaches half a percent, as \autoref{fig:MeanResponseF}
 shows.
 
 \begin{figure}
 \centering
-\label{fig:MeanResponseF}
 \includegraphics[trim=6cm 3cm 6cm 3cm,width=16cm]{images/mean_response}
 \caption{Response to $0.1s$ impulses with the mean parameters from \cite{Friston2000}}
+\label{fig:MeanResponseF}
 \end{figure}
 
 While this could be the result of a stimulus
@@ -323,9 +323,9 @@ confusing, with peaks of well below $.1\%$ (\autoref{fig:MeanResponseJ}).
 
 \begin{figure}
 \centering
-\label{fig:MeanResponseJ}
 \includegraphics[trim=6cm 3cm 6cm 3cm,width=16cm]{images/mean_response_johnston}
 \caption{Response to $0.1s$ impulses with the mean parameters from \cite{Johnston2008}}
+\label{fig:MeanResponseJ}
 \end{figure}
 
 Its likely that these differences are due to some difference in preprocessing,
