--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -22,7 +22,7 @@ whole brain analysis.
 
 Note that except for \autoref{sec:VeryLongSim} the same stimulus sequence
 that was used in real data (\autoref{sec:RealData}) was used in the simulations. This sequence may
-be found in \autoref{tab:flashes}, but because of the availability of ground
+be found in \autoref{sec:ExperimentConfig}, but because of the availability of ground
 truth in simulations is not displayed in this section.
 
 \section{Single Time Series}
