--- a/doc/thesis/resultsB.tex
+++ b/doc/thesis/resultsB.tex
@@ -24,7 +24,8 @@ at every voxel. To validate the quality of the particle filter, the results
 were compared with SPM, both in terms of the location and the fit.
 
 %scanner info?
-\section{FMRI Configuration}
+\section{Experiment Configuration}
+\label{sec:ExperimentConfig}
 For the FMRI data discussed in \autoref{sec:RealData}, tests were 
 performed on a right handed volunteer using a GE SIGNA HDx 1.5 Tesla
 scanner with a single echo EPI sequence. Slice spacing was
