removed a question mark

--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -789,7 +789,7 @@ helpful to show what threshold would remove those false positives.
 \includegraphics[width=10cm]{images/sim_hm_15_6.png}}
 \subfigure{\includegraphics[width=1cm]{images/scale6.png}}
 \caption{More stringent mutual information heatmap. Higher (yellow) is better.}
-\label{fig:SimSNRhm}
+\label{fig:sim_hm2}
 \end{figure}
 
 \begin{figure} %bottom left
